Load config from remote

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,21 @@
 spring.application.name=statistic-service
 
-server.port=9082
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/statistic_service
-spring.datasource.username=postgres
-spring.datasource.password=admin
-
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-
-# Uncomment and configure the Swagger UI path
-springdoc.swagger-ui.path=/swagger-ui.html
-# Make Swagger UI available at the root path
-springdoc.swagger-ui.disable-swagger-default-url=true
+#server.port=9082
+#
+#spring.datasource.url=jdbc:postgresql://localhost:5432/statistic_service
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
+#
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#
+## Uncomment and configure the Swagger UI path
+#springdoc.swagger-ui.path=/swagger-ui.html
+## Make Swagger UI available at the root path
+#springdoc.swagger-ui.disable-swagger-default-url=true
 
 #logging.level.root=debug
+spring.config.import=configserver:http://localhost:8888
+
+spring.cloud.config.fail-fast=true
